# russapp

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  crud.db  run.bat  rundocker.bat  rungit.bat
examples/: hallo.rs  serve.rs
migrations/2020-12-11-015619_create_users/: up.sql
src/: crud.rs  db.rs  lib.rs  main.rs  routes.rs  simp.rs  simple.rs
src/db/: dbmysql.rs
src/simp/: m_hello2.rs
templates/: 404.html  base.html  form.html  index.html
tests/: integration-tests.rs  unit-tests.rs
tests/multi-file-test/: main.rs
