[package]
name = "russapp"
version = "0.1.0"
authors = ["Tran Duc Loi <loitranduc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://crates.io/crates/oracle


[dependencies]
log = "0.4.11"
simplelog = "^0.7.6"
threadpool = "*"
mysql = "*"
#diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
