[package]
name = "russapp"
version = "0.1.0"
authors = ["Tran Duc Loi <loitranduc@gmail.com>"]
edition = "2018"

#rustc-link-search = ["./src/bin"]
#rustc-link-lib = ["hallo"]

# The available options are bin, lib, rlib, dylib, cdylib, staticlib, and proc-macro
[[example]]
name = "hallo"
crate-type = ["rlib"]

[[example]]
name = "serve"
crate-type = ["bin"]

# Tell cargo to run a specific file
# [[bin]]
# name = "crud"
# path = "src/crud.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://crates.io/crates/oracle


[dependencies]
log = "0.4.11"
simplelog = "^0.7.6"
env_logger = "*"
threadpool = "*"
dotenv = "0.15.0"
telegram-bot = "0.8.0"
anyhow = "*"
chrono = "*"
# -------------------Databases----------------------
mysql = "*"
diesel = { version = "1.4.4", features = ["sqlite","r2d2","chrono"] }
# -------------------actix--------------------------
actix-web = "3"
tera = "1"
actix-files = "0.3"
actix-session = "0.4"
actix-utils = "2"
serde = { version = "1", features = ["derive"] }
# --------------------wasm--------------------------
wasm-bindgen = "0.2.63"

[dev-dependencies]
actix-rt = "1"
